force-app/main/default/objects/Property_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Map_Extent_Y_Max__c</fullName>
        <description>Used for creating the Map URLs for Deals and Property Interests</description>
        <label>Map Extent (Y-Max)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Map_Extent_Y_Min__c</fullName>
        <description>Used for creating the Map URLs for Deals and Property Interests</description>
        <label>Map Extent (Y-Min)</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_Easement_DR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The master property interest record when there are subdivisions of the underlying property.</description>
        <label>Master Easement/DR</label>
        <referenceTo>Property_Interest__c</referenceTo>
        <relationshipLabel>Subdivisions</relationshipLabel>
        <relationshipName>Property_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mean_Latitude__c</fullName>
        <formula>IF(AND(Latitude_Lower_Left__c &lt;&gt; 0, Latitude_Upper_Right__c &lt;&gt; 0),TEXT(((Latitude_Lower_Left__c+Latitude_Upper_Right__c)/2)),&quot;null&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average (mean) value of the upper right latitude and the lower left latitude. Used to center the atlas map.</inlineHelpText>
        <label>Mean Latitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mean_Longitude__c</fullName>
        <formula>IF(AND(Longitude_Lower_Left__c &lt;&gt; 0, Longitude_Upper_Right__c &lt;&gt; 0),TEXT(((Longitude_Lower_Left__c+Longitude_Upper_Right__c)/2)),&quot;null&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average (mean) value of the upper right longitude and the lower left longitude. Used to center the atlas map.</inlineHelpText>
        <label>Mean Longitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitor_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Select the monitor assigned OR TNC staff responsible for the assigned monitor if non-TNC.</inlineHelpText>
        <label>Monitor Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monitoring_Due_Date__c</fullName>
        <formula>IF( AND(Monitoring_Due_Month__c&gt;0, Monitoring_Due_Day__c&gt;0),
DATE(year(TODAY() ), Monitoring_Due_Month__c , Monitoring_Due_Day__c ),
 Next_Monitoring_Due_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date next monitoring is due. Use the &apos;Monitoring Due Month&apos; and &apos;Monitoring Due Day&apos; to change this date if the date is inaccurate for this year.</inlineHelpText>
        <label>Monitoring Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monitoring_Due_Day__c</fullName>
        <description>For easement/deed restriction due date calculation</description>
        <inlineHelpText>Enter the 2-digit day number for the monitoring due date.</inlineHelpText>
        <label>Monitoring Due Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monitoring_Due_Month__c</fullName>
        <description>For easement/deed restriction due date calculation</description>
        <inlineHelpText>Enter the 2 digit month in which monitoring is due.  Leading zeroes NOT required.</inlineHelpText>
        <label>Monitoring Due Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monitoring_End_Date__c</fullName>
        <description>For Easements and deed restrictions that have contractual monitoring (non-SOP).</description>
        <inlineHelpText>If monitoring is contractual or partnership monitoring only, enter the date that this monitoring obligations will end for TNC.</inlineHelpText>
        <label>Contractual Monitoring End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monitoring_Obligation__c</fullName>
        <description>For easements and deed restrictions if different than standard SOP required annual monitoring and reporting.</description>
        <inlineHelpText>Describe the monitoring and reporting obligations if &quot;CA&quot; is selected above.  If we are obligated to invite funding organizations, owners, or other third parties, you can indicate that information here.</inlineHelpText>
        <label>Monitoring and Reporting Obligation</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monitoring_Required__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>If monitoring required by SOP and reported to WO, select &quot;SOP&quot;.
If local monitoring required by contractual, partnership or other agreement, select &quot;CA&quot;.
If no monitoring is required, select &quot;None&quot;.</inlineHelpText>
        <label>Type of Monitoring Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>SOP</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monitoring_Transfers__c</fullName>
        <description>Moved from PMU level</description>
        <inlineHelpText>Briefly describe how TNC&apos;s conservation objectives and legal compliance will be maintained after the property or interest in the property is transferred.</inlineHelpText>
        <label>Monitoring Transfers</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>My_Monitoring_Assignments__c</fullName>
        <formula>$User.Id =  Monitor_Assigned__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Monitoring Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Irrigated_Ag_Waiver_Program__c</fullName>
        <description>Moved to PI level 3/1/17</description>
        <inlineHelpText>If enrolled in an ag waiver program, list the name of waiver program (usually a coalition).</inlineHelpText>
        <label>Name of Irrigated Ag Waiver Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Lessee__c</fullName>
        <description>Refer to individual lease contracts</description>
        <label>Xdeprecated: Name of Lessee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Monitoring_Due_Date__c</fullName>
        <description>To capture initial monitoring due date within 15 months of acquisition of easement or deed restriction. Process updates sets this to 15 months from the date acquired when a new record is created.</description>
        <inlineHelpText>Enter the latest date that the first monitoring can occur (ie. within 15 months of acquisition)</inlineHelpText>
        <label>First Monitoring Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notice__c</fullName>
        <formula>IF( First_Report_Date__c&lt;DATEVALUE(&quot;2018-01-01&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0150c000004Fs4u&quot;, &quot;Pin&quot;, 40, 40)&amp;&quot; &quot;&amp;&quot;2017 and earlier years’ completed monitoring forms are stored in Box. Click &apos;View Report PDFs Pre-2018&apos; button above to see the list of pre-2018 reports for this interest. Photos for all years shown chonologically at the bottom of this record.&quot;&amp;BR()&amp;BR()&amp;BR(),&quot;&quot;)</formula>
        <inlineHelpText>Notice - will display a message if necessary.</inlineHelpText>
        <label>Notice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_of_Termination_Sent__c</fullName>
        <description>Moved from PMU level 3/1/17</description>
        <inlineHelpText>If planning to terminate the Williamson contract, has notice of termination been sent? If yes, please attach a copy of the termination notice to the &quot;Notes &amp; Attachments&quot; section of the property management record.</inlineHelpText>
        <label>Notice of Termination Sent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>To Do</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Subdivisions_Permitted__c</fullName>
        <inlineHelpText>If subdivision is permitted, enter the maximum number of subdivisions allowed.</inlineHelpText>
        <label>Number Subdivisions Permitted</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Subdivisions__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Created to move over info from Conservation Track for easements and deed restrictions.</description>
        <inlineHelpText>Leave as &quot;0&quot; if not subdivided.  Change this number to reflect the number of subdivisions if newly divided or initially setting up subdivisions. Must be 2 or more, subdivision must be permitted and check Create Subdivisions below.</inlineHelpText>
        <label>Number of Subdivisions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Subdivisions_Created__c</fullName>
        <description>Number of active Subdivisions rolled up from related list.</description>
        <inlineHelpText>Non-editable field which displays the number of active subdivisions related to this property.  See related list below.</inlineHelpText>
        <label>Number of Related Subdivisions</label>
        <summaryFilterItems>
            <field>Subdivision__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Subdivision__c.Property_Interest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oil_Mineral_Other_Reserved_Rights__c</fullName>
        <description>Please describe ownership of any oil, gas, mineral, and/or other reserved rights and describe any terms of access. Please attach deeds retaining ownership or deeds/documents setting forth access rights to the &quot;Notes &amp; Attachments&quot; section.</description>
        <inlineHelpText>Please describe ownership of any oil, gas, mineral, and/or other reserved rights and describe any terms of access. Please attach deeds retaining ownership or deeds/documents setting forth access rights to the &quot;Notes &amp; Attachments&quot; section.</inlineHelpText>
        <label>Oil, Mineral &amp; Other Reserved Rights</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_External_Report_Agency__c</fullName>
        <description>Moved to related object External Reporting Agency</description>
        <inlineHelpText>Please enter any additional external reporting agencies or external reporting requirements.</inlineHelpText>
        <label>XdeprecatOther External Reporting Agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Identifying_Tract_Names__c</fullName>
        <description>Move from PMU 3/1/17</description>
        <inlineHelpText>If the tract has another name(s), please enter it here.</inlineHelpText>
        <label>Other Identifying Tract Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overlay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for Easements and deed restrictions 4/20/17</description>
        <inlineHelpText>Check if the acreage of this interest overlays another easement or deed restriction.  If checked, the acreage will not count toward the total interest group acres and this interest will not appear as the primary interest in the Conservation Atlas maps.</inlineHelpText>
        <label>Does acreage overlay another interest?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ownership_Status__c</fullName>
        <inlineHelpText>Select the status that appropriately reflects TNC&apos;s status with owning or holding this interest.</inlineHelpText>
        <label>Ownership Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TNC Owned Fee</fullName>
                </value>
                <value>
                    <fullName>Formerly TNC Owned Fee</fullName>
                </value>
                <value>
                    <fullName>TNC Owned Rights</fullName>
                </value>
                <value>
                    <fullName>Formerly TNC Owned Rights</fullName>
                </value>
                <value>
                    <fullName>TNC Managed</fullName>
                    <label>TNC Managed but not TNC owned</label>
                </value>
                <value>
                    <fullName>Partial Cooperative Management</fullName>
                </value>
                <value>
                    <fullName>Formerly TNC Managed but not owned</fullName>
                </value>
                <value>
                    <fullName>TNC Held Easement or Deed Restriction</fullName>
                </value>
                <value>
                    <fullName>Formerly TNC Held Easement</fullName>
                </value>
                <value>
                    <fullName>Easement Held by non-TNC Entity</fullName>
                </value>
                <value>
                    <fullName>Deed Restriction - Non-Reportable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRFolderID__c</fullName>
        <inlineHelpText>Box ID for Primary References folder</inlineHelpText>
        <label>Primary References Folder ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_of_large_conservation_effort__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added on 4/20/17 for easements and deed restrcitions.</description>
        <inlineHelpText>If this property is part of a larger conservation effort, check the box and describe in description box.</inlineHelpText>
        <label>Part of a larger conservation effort?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permitted_Activitiies__c</fullName>
        <description>For easements and deed restrictions.</description>
        <inlineHelpText>Please select all activities permitted on the property covered by the easement or deed restrictions.</inlineHelpText>
        <label>Permitted Activitiies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dogs</fullName>
                </value>
                <value>
                    <fullName>Horses</fullName>
                </value>
                <value>
                    <fullName>OHV&apos;s</fullName>
                </value>
                <value>
                    <fullName>Hunting</fullName>
                </value>
                <value>
                    <fullName>Camping</fullName>
                </value>
                <value>
                    <fullName>Climbing</fullName>
                </value>
                <value>
                    <fullName>Plantings</fullName>
                </value>
                <value>
                    <fullName>Fishing</fullName>
                </value>
                <value>
                    <fullName>Hang-Gliding</fullName>
                </value>
                <value>
                    <fullName>Collecting</fullName>
                </value>
                <value>
                    <fullName>Hiking</fullName>
                </value>
                <value>
                    <fullName>Spelunking</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Property__c</fullName>
        <description>Comes from deal record to capture personal property acquired as part of the transaction.</description>
        <inlineHelpText>For fees, list any personal property acquired as part of the acquisition.
For easements or deed restrictions, note any personal property of note on the premises if monitors need to be aware of its presence.</inlineHelpText>
        <label>Personal Property</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Contacts__c</fullName>
        <description>DLRS Rollup of related property contacts (owners/managers and lessees only). When an easement monitoring record is finalized the data in this field is copied to the monitoring report for posterity.</description>
        <inlineHelpText>Non-editable field. Related property contacts (owners/managers and lessees only). When an easement monitoring record is finalized the data in this field is copied to the monitoring report for posterity. Property contacts to be set up in the related list.</inlineHelpText>
        <label>Property Contacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Interest_Group__c</fullName>
        <inlineHelpText>Property and/or interest grouping with which this interest is associated.
Fee properties belong in fee management groupings.
Easements and deed restrictions go in partial interest groupings.</inlineHelpText>
        <label>Property Interest Group</label>
        <referenceTo>Property_Management__c</referenceTo>
        <relationshipLabel>Property Interests</relationshipLabel>
        <relationshipName>Related_Properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property_Management_Unit__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Property_Interest_Group__r.Id, Property_Interest_Group__r.Name)</formula>
        <inlineHelpText>This fee interest&apos;s Property Management Unit. All of the interests in the management unit are managed together.</inlineHelpText>
        <label>Property Management Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Map_URL__c</fullName>
        <inlineHelpText>Deprecated - creating the urls from the extent fields instead so that we can rollup the extent for a property management unit from the property interests automatically.</inlineHelpText>
        <label>XDeprecated: Property Map URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Property_Map_URL_formula__c</fullName>
        <description>Formula field creates the URL from the Map Extent x and y values. Read-Only.</description>
        <formula>IF(Map_Extent_X_Min__c!=0,&quot;http://camaps.tnc.org/atlas/?extent=&quot;&amp;TEXT(Map_Extent_X_Min__c)&amp;&quot;,&quot;&amp;TEXT(Map_Extent_Y_Min__c)&amp;&quot;,&quot;&amp;TEXT(Map_Extent_X_Max__c)&amp;&quot;,&quot;&amp;TEXT(Map_Extent_Y_Max__c)&amp;&quot;&amp;config=config_propmgmt.xml&quot;,&quot;&quot;)</formula>
        <inlineHelpText>Read Only.  If populated click here to see the property map.</inlineHelpText>
        <label>Property Map URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Action_Pending__c</fullName>
        <description>Moved from PMU 3/1/17</description>
        <inlineHelpText>Describe status of exemption filings, refunds pending, etc. and include name of person responsible for the exemption filing and the date.</inlineHelpText>
        <label>Property Tax Action Pending</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Description__c</fullName>
        <description>Text field describing the Property Tax Obligation.</description>
        <inlineHelpText>Describe the Property Tax Obligation</inlineHelpText>
        <label>Property Tax Description</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Take_Out_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Moved from PMU 3/1/17</description>
        <inlineHelpText>Select the name of the proposed partner to whom the interest is expected to be sold or transferred. Search different spellings and acronyms, If you cannot find an existing account, create a new one by going to the sidebar and clicking create new account.</inlineHelpText>
        <label>Proposed Take Out Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Property Interests (Proposed Take Out Partner)</relationshipLabel>
        <relationshipName>Property_Interests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Access__c</fullName>
        <description>Picklist field indicating whether a TNC fee interest allows public access. This field is used to determine if TNC preserves are in compliance with the American Disabilities Act on TNC Preserves. Please SOP for further information. ADuperault 7-2-12.</description>
        <inlineHelpText>Indicate whether the property is open to the public. If there is open or limited access, please complete and upload a Other Power-Driven Mobility Device (OPDMD) Assessment Form. See the &quot;American Disabilities Act on TNC Preserve&quot; SOP for help.</inlineHelpText>
        <label>Public Access?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open Access</fullName>
                </value>
                <value>
                    <fullName>Limited Access</fullName>
                </value>
                <value>
                    <fullName>No Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Acquisition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this interest was created from a deal record, the deal info will be copied over here.  Otherwise, you can search by the deal name to find the related deal if it is in Salesforce.</inlineHelpText>
        <label>Related Acquisition Deal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Property Interests (Related Acquisition Deals)</relationshipLabel>
        <relationshipName>Related_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Easement_Disposition_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Moved from PMU 3/1/17</description>
        <inlineHelpText>If there is a related easement disposition, select the name of the related easement disposition record from the look up icon. If the easement disposition record does not exist, leave this field blank.</inlineHelpText>
        <label>Related Easement Disposition Deal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Property Interests (Related Easement Disposition Deal)</relationshipLabel>
        <relationshipName>Property_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Fee_Disposition_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Moved from PMU 3/1/17.</description>
        <inlineHelpText>Select the name of the related fee disposition record from the look up icon. If the fee disposition record does not exist, leave this field blank.</inlineHelpText>
        <label>Related Fee Disposition Deal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Property Interests (Related Fee Disposition Deal)</relationshipLabel>
        <relationshipName>Property_Interests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reversion_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the restricted deed include a reversion clause?</inlineHelpText>
        <label>Deed Restrictions - Reversion Clause?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <description>The abbreviated name for the interest that will be used in Collector and Mobile Monitoring to identify the interest.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a 20 character or less name to uniquely identify the easement.</inlineHelpText>
        <label>Short Name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Signage_Description__c</fullName>
        <description>Moved from PMU 3/1/17</description>
        <inlineHelpText>Please provide a description of the sign(s) located on the property, e.g., sign required by the grant funder or donor. If no sign is present, please explain why, e.g., too remote, high risk of vandalism, etc.</inlineHelpText>
        <label>Signage Description</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signage_Photo__c</fullName>
        <description>Moved from PMU 3/1/17</description>
        <inlineHelpText>Please upload a photo of the property signage by selecting the image icon within this field. You must be in edit mode in order to upload a photo.</inlineHelpText>
        <label>Signage Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Signage_Type__c</fullName>
        <inlineHelpText>Please select all types of signs that are on the property interest or select in process if we are working on building or redoing signs.</inlineHelpText>
        <label>Signage Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>TNC</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Grant Funder</fullName>
                </value>
                <value>
                    <fullName>Donor</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_at_Last_Monitoring_No_Subdiv__c</fullName>
        <description>Status at Last Monitoring of Non-Subdivided Properties Only. Field is connected to DLRS Rollup with the same name.</description>
        <inlineHelpText>Status at Last Monitoring of Non-Subdivided Properties Only.</inlineHelpText>
        <label>Status at Last Monitoring No Subdiv</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_at_Last_Monitoring_Subdivs_Only__c</fullName>
        <description>Status at Last Monitoring for ONLY Subdivided Properties. Field is connected to DLRS Rollup with the same name.</description>
        <inlineHelpText>Status at Last Monitoring for ONLY Subdivided Properties.</inlineHelpText>
        <label>Status at Last Monitoring Subdivs Only</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_at_Last_Monitoring_inc_subdivs__c</fullName>
        <description>Status at Last Monitoring for all Properties (including Subdivisions) with an &quot;Approved&quot; Approval Status. Formula contains fields that update through the DLRS (Declarative Lookup Rollup Summaries) app.</description>
        <formula>IF(ISBLANK(Status_at_Last_Monitoring_No_Subdiv__c), &quot;&quot;, Status_at_Last_Monitoring_No_Subdiv__c) &amp;
IF(ISBLANK(Status_at_Last_Monitoring_Subdivs_Only__c), &quot;&quot;, IF(ISBLANK(Status_at_Last_Monitoring_No_Subdiv__c),&quot;&quot;, &quot;; &quot;) &amp; &quot;Subdivs: &quot; &amp; Status_at_Last_Monitoring_Subdivs_Only__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status at Last Monitoring for all Properties (including Subdivisions) with an &quot;Approved&quot; Approval Status.</inlineHelpText>
        <label>Status at Last Monitoring (inc. subdivs)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_at_last_monitoring__c</fullName>
        <description>For easements 5/4/17. Idea is to copy from monitoring report when complete.</description>
        <inlineHelpText>This is the status of monitoring/compliance at the end of the last monitoring period.  This is updated each year from the monitoring report. Select &quot;New&quot; for a new interest.</inlineHelpText>
        <label>Status at last monitoring</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Monitoring_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subdivision_Permitted__c</fullName>
        <description>Added for easements and deed restriction 4/21/17</description>
        <inlineHelpText>Select status on permitting subdivision on the property covered by the easement or deed restriction.  If subdivided, a different report needs to be sent to each owner.  If other, describe in the subdivision notes field.</inlineHelpText>
        <label>Subdivision Permitted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Other - Reinterpretaion, judicial,etc.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subdivisions_Created__c</fullName>
        <defaultValue>TEXT(1)</defaultValue>
        <inlineHelpText>Used as a counter to make sure that the correct number of subdivisions are created by the process.</inlineHelpText>
        <label>Subdivisions Created</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivisions_Monitored_Separately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be checked for subdivided interests that require separate monitoring reports for each subdivision. If checked, a report for each subdivision will be created at the beginning of the year.  If not, only one report will be created for the interest.</description>
        <inlineHelpText>Check if separate monitoring reports are required for each subdivision.</inlineHelpText>
        <label>Subdivisions Monitored Separately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject_to_Williamson_Act__c</fullName>
        <description>Moved from PMU 3/1/17</description>
        <inlineHelpText>Is all or any portion of the property under a Williamson Act contract? If yes, please attach a copy of the contract to the &quot;Notes &amp; Attachments&quot; section of the property management record.</inlineHelpText>
        <label>Subject to Williamson Act</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surveys__c</fullName>
        <inlineHelpText>When and where have surveys been conducted on this interest? Make sure to include a reference to where those survey documents are located. NOTE: This field automatically rolls up to Property Management Record.</inlineHelpText>
        <label>When and where were surveys conducted?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TNC_Interest_Book_Value__c</fullName>
        <inlineHelpText>TNC interest book value is based on the original cost of the asset less any depreciation, amortization or impairment costs made against the asset. The value is recorded in the Conservation Land Management (CLS) database. This will be copied from the deal.</inlineHelpText>
        <label>TNC Interest Book Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>